Dataset deposition works for all requests, except the final commit
