# src/main/java/eudat/b2share/model/Deposition.java
@@ -1,0 +1,100 @@
+/**
+ * B2SHARE API
+ * EUDAT B2SHARE API
+ *
+ * OpenAPI spec version: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+
+package eudat.b2share.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import java.math.BigDecimal;
+
+
+/**
+ * Deposition
+ */
+
+public class Deposition   {
+  @JsonProperty("deposition_id")
+  private BigDecimal depositionId = null;
+
+  public Deposition depositionId(BigDecimal depositionId) {
+    this.depositionId = depositionId;
+    return this;
+  }
+
+   /**
+   * .
+   * @return depositionId
+  **/
+  @ApiModelProperty(example = "null", required = true, value = ".")
+  public BigDecimal getDepositionId() {
+    return depositionId;
+  }
+
+  public void setDepositionId(BigDecimal depositionId) {
+    this.depositionId = depositionId;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    Deposition deposition = (Deposition) o;
+    return Objects.equals(this.depositionId, deposition.depositionId);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(depositionId);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class Deposition {\n");
+    
+    sb.append("    depositionId: ").append(toIndentedString(depositionId)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
