# src/main/java/eudat/b2share/model/FileDetailInfo.java
@@ -1,0 +1,146 @@
+/**
+ * B2SHARE API
+ * EUDAT B2SHARE API
+ *
+ * OpenAPI spec version: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+
+package eudat.b2share.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import java.math.BigDecimal;
+
+
+/**
+ * FileDetailInfo
+ */
+
+public class FileDetailInfo   {
+  @JsonProperty("name")
+  private String name = null;
+
+  @JsonProperty("size")
+  private BigDecimal size = null;
+
+  @JsonProperty("url")
+  private String url = null;
+
+  public FileDetailInfo name(String name) {
+    this.name = name;
+    return this;
+  }
+
+   /**
+   * First name of the Uber user.
+   * @return name
+  **/
+  @ApiModelProperty(example = "null", value = "First name of the Uber user.")
+  public String getName() {
+    return name;
+  }
+
+  public void setName(String name) {
+    this.name = name;
+  }
+
+  public FileDetailInfo size(BigDecimal size) {
+    this.size = size;
+    return this;
+  }
+
+   /**
+   * Last name of the Uber user.
+   * @return size
+  **/
+  @ApiModelProperty(example = "null", value = "Last name of the Uber user.")
+  public BigDecimal getSize() {
+    return size;
+  }
+
+  public void setSize(BigDecimal size) {
+    this.size = size;
+  }
+
+  public FileDetailInfo url(String url) {
+    this.url = url;
+    return this;
+  }
+
+   /**
+   * Last name of the Uber user.
+   * @return url
+  **/
+  @ApiModelProperty(example = "null", value = "Last name of the Uber user.")
+  public String getUrl() {
+    return url;
+  }
+
+  public void setUrl(String url) {
+    this.url = url;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    FileDetailInfo fileDetailInfo = (FileDetailInfo) o;
+    return Objects.equals(this.name, fileDetailInfo.name) &&
+        Objects.equals(this.size, fileDetailInfo.size) &&
+        Objects.equals(this.url, fileDetailInfo.url);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(name, size, url);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class FileDetailInfo {\n");
+    
+    sb.append("    name: ").append(toIndentedString(name)).append("\n");
+    sb.append("    size: ").append(toIndentedString(size)).append("\n");
+    sb.append("    url: ").append(toIndentedString(url)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
