# src/main/java/eudat/b2share/model/InlineResponse200.java
@@ -1,0 +1,125 @@
+/**
+ * B2SHARE API
+ * EUDAT B2SHARE API
+ *
+ * OpenAPI spec version: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+
+package eudat.b2share.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import eudat.b2share.model.FileInfo;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import java.util.ArrayList;
+import java.util.List;
+
+
+/**
+ * InlineResponse200
+ */
+
+public class InlineResponse200   {
+  @JsonProperty("files")
+  private List<FileInfo> files = new ArrayList<FileInfo>();
+
+  @JsonProperty("message")
+  private String message = null;
+
+  public InlineResponse200 files(List<FileInfo> files) {
+    this.files = files;
+    return this;
+  }
+
+   /**
+   * .
+   * @return files
+  **/
+  @ApiModelProperty(example = "null", value = ".")
+  public List<FileInfo> getFiles() {
+    return files;
+  }
+
+  public void setFiles(List<FileInfo> files) {
+    this.files = files;
+  }
+
+  public InlineResponse200 message(String message) {
+    this.message = message;
+    return this;
+  }
+
+   /**
+   * .
+   * @return message
+  **/
+  @ApiModelProperty(example = "null", value = ".")
+  public String getMessage() {
+    return message;
+  }
+
+  public void setMessage(String message) {
+    this.message = message;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    InlineResponse200 inlineResponse200 = (InlineResponse200) o;
+    return Objects.equals(this.files, inlineResponse200.files) &&
+        Objects.equals(this.message, inlineResponse200.message);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(files, message);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class InlineResponse200 {\n");
+    
+    sb.append("    files: ").append(toIndentedString(files)).append("\n");
+    sb.append("    message: ").append(toIndentedString(message)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
