# src/main/java/eudat/b2share/model/InlineResponse201.java
@@ -1,0 +1,145 @@
+/**
+ * B2SHARE API
+ * EUDAT B2SHARE API
+ *
+ * OpenAPI spec version: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+
+package eudat.b2share.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+
+
+/**
+ * InlineResponse201
+ */
+
+public class InlineResponse201   {
+  @JsonProperty("deposit_id")
+  private String depositId = null;
+
+  @JsonProperty("message")
+  private String message = null;
+
+  @JsonProperty("location")
+  private String location = null;
+
+  public InlineResponse201 depositId(String depositId) {
+    this.depositId = depositId;
+    return this;
+  }
+
+   /**
+   * .
+   * @return depositId
+  **/
+  @ApiModelProperty(example = "null", value = ".")
+  public String getDepositId() {
+    return depositId;
+  }
+
+  public void setDepositId(String depositId) {
+    this.depositId = depositId;
+  }
+
+  public InlineResponse201 message(String message) {
+    this.message = message;
+    return this;
+  }
+
+   /**
+   * .
+   * @return message
+  **/
+  @ApiModelProperty(example = "null", value = ".")
+  public String getMessage() {
+    return message;
+  }
+
+  public void setMessage(String message) {
+    this.message = message;
+  }
+
+  public InlineResponse201 location(String location) {
+    this.location = location;
+    return this;
+  }
+
+   /**
+   * .
+   * @return location
+  **/
+  @ApiModelProperty(example = "null", value = ".")
+  public String getLocation() {
+    return location;
+  }
+
+  public void setLocation(String location) {
+    this.location = location;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    InlineResponse201 inlineResponse201 = (InlineResponse201) o;
+    return Objects.equals(this.depositId, inlineResponse201.depositId) &&
+        Objects.equals(this.message, inlineResponse201.message) &&
+        Objects.equals(this.location, inlineResponse201.location);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(depositId, message, location);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class InlineResponse201 {\n");
+    
+    sb.append("    depositId: ").append(toIndentedString(depositId)).append("\n");
+    sb.append("    message: ").append(toIndentedString(message)).append("\n");
+    sb.append("    location: ").append(toIndentedString(location)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
